# src/openapi/specs/getCompressedTokenBalancesByOwner.yaml
@@ -4,7 +4,7 @@ info:
   description: Solana indexer for general compression
   license:
     name: Apache-2.0
-  version: 0.21.0
+  version: 0.24.0
 servers:
 - url: http://127.0.0.1
 paths:
@@ -56,6 +56,7 @@ paths:
                       nullable: true
                     owner:
                       $ref: '#/components/schemas/SerializablePubkey'
+                  additionalProperties: false
         required: true
       responses:
         '200':
@@ -72,6 +73,7 @@ paths:
                     $ref: '#/components/schemas/Context'
                   value:
                     $ref: '#/components/schemas/TokenBalanceList'
+                additionalProperties: false
         '429':
           description: Exceeded rate limit.
           content:
@@ -160,8 +162,9 @@ components:
       properties:
         account:
           $ref: '#/components/schemas/Account'
-        optional_token_data:
+        optionalTokenData:
           $ref: '#/components/schemas/TokenData'
+      additionalProperties: false
     Base58String:
       type: string
       description: A base 58 encoded string.
@@ -246,29 +249,29 @@ components:
       required:
       - root
       - address
-      - lower_range_address
-      - higher_range_address
-      - leaf_index
+      - lowerRangeAddress
+      - higherRangeAddress
+      - leafIndex
       - proof
-      - merkle_tree
-      - root_seq
-      - low_element_leaf_index
+      - merkleTree
+      - rootSeq
+      - lowElementLeafIndex
       properties:
         address:
           $ref: '#/components/schemas/SerializablePubkey'
-        higher_range_address:
+        higherRangeAddress:
           $ref: '#/components/schemas/SerializablePubkey'
-        leaf_index:
+        leafIndex:
           type: integer
           format: int32
           minimum: 0
-        low_element_leaf_index:
+        lowElementLeafIndex:
           type: integer
           format: int32
           minimum: 0
-        lower_range_address:
+        lowerRangeAddress:
           $ref: '#/components/schemas/SerializablePubkey'
-        merkle_tree:
+        merkleTree:
           $ref: '#/components/schemas/SerializablePubkey'
         proof:
           type: array
@@ -276,10 +279,11 @@ components:
             $ref: '#/components/schemas/Hash'
         root:
           $ref: '#/components/schemas/Hash'
-        root_seq:
+        rootSeq:
           type: integer
           format: int64
           minimum: 0
+      additionalProperties: false
     MerkleProofWithContext:
       type: object
       required:
